<resources>
    <string name="app_name">MolWear</string>
    <string name="project_file_description">MolWear Project</string>
    <string name="github">https://github.com/SeanPesce/Molar-Wear</string>
    <string name="github_view">View on GitHub</string>
    <string name="github_view_url">View on GitHub: <b>goo.gl/BnqZ38</b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="no_data">No data</string>
    <string name="no_projects">No projects</string>
    <string name="no_subjects">@string/no_data</string>
    <string name="title_choose_file">Choose file</string>
    <string name="title_import_proj">Import Project</string>
    <string name="title_choose_proj">Projects</string>
    <string name="title_activity_edit_subject">Edit Individual</string>
    <string name="title_list_section_subjects">@string/individuals</string>
    <string name="import_project">Import project</string>
    <string name="act_export">Export</string>
    <string name="act_export_project">Export…</string>
    <string name="act_import_project">Import…</string>
    <string name="act_delete">Delete</string>
    <string name="act_edit">Edit</string>
    <string name="act_open">Open</string>
    <string name="act_close">Close</string>
    <string name="act_save">Save</string>
    <string name="act_share">Share</string>
    <string name="act_view_details">Details</string>
    <string name="act_options">Options</string>
    <string name="act_photo">Photo</string>
    <string name="act_gallery">Gallery</string>
    <string name="act_notes">Notes</string>
    <string name="act_move_up">Move Up</string>
    <string name="act_move_down">Move Down</string>
    <string name="act_help">Help</string>
    <string name="act_report_issue">Report an issue</string>
    <string name="act_analyze_subject">Analyze individual</string>
    <string name="act_choose_existing">Choose Existing %s</string>
    <string name="error">Error</string>
    <string name="err_access_denied">ERROR: Access denied</string>
    <string name="err_invalid_type_not_molar">Invalid type (must be Tooth.Type.MOLAR)</string>
    <string name="err_app_util_context_null">AppUtil.CONTEXT was null</string>
    <string name="err_app_util_view_null">AppUtil.VIEW was null</string>
    <string name="err_startup_proj_load">WARNING: %d projects could not be loaded</string>
    <string name="err_proj_load_fail">Error loading project: %s</string>
    <string name="err_proj_create_fail">Failed to create project</string>
    <string name="err_proj_create_fail_exists">A project with the specified title already exists.</string>
    <string name="err_proj_create_fail_empty_title">Project title cannot be empty.</string>
    <string name="err_proj_edit_title_fail">Failed to rename project</string>
    <string name="err_proj_edit_title_fail_exists">@string/err_proj_create_fail_exists</string>
    <string name="err_proj_edit_title_fail_rename_file">Unable to rename project file; no changes were made.</string>
    <string name="err_subj_create_fail">Failed to add individual</string>
    <string name="err_subj_create_fail_exists">An individual with the specified ID already exists.</string>
    <string name="err_subj_edit_id_fail">Failed to rename individual</string>
    <string name="err_subj_edit_id_fail_exists">@string/err_subj_create_fail_exists</string>
    <string name="err_subj_invalid_site">Invalid site ID</string>
    <string name="err_subj_invalid_group">Invalid Group ID</string>
    <string name="err_subj_invalid_age">Invalid age</string>
    <string name="err_file_write_fail">ERROR: Failed to write file</string>
    <string name="err_file_read_fail">ERROR: Failed to read file</string>
    <string name="err_unsupported_android_version">"ERROR: Unsupported Android version</string>
    <string name="err_update_navbar_fail">WARNING: Failed to update navbar</string>
    <string name="err_resource_not_found">Failed to locate resource</string>
    <string name="err_export_failed">ERROR: Export Failed</string>
    <string name="err_export_chart_failed">An error occurred when attempting to write the image file.</string>
    <string name="err_no_groups_in_proj">No group IDs found in this project</string>
    <string name="err_no_sites_in_proj">No site IDs found in this project</string>
    <string name="lbl_subject_id">Individual ID</string>
    <string name="lbl_site_id">Site</string>
    <string name="lbl_group_id">Group</string>
    <string name="lbl_subject_age">Age</string>
    <string name="lbl_subject_sex">Sex</string>
    <string name="lbl_subject_notes">Additional notes</string>
    <string name="lbl_subject_molars">Molars</string>
    <string name="lbl_subject_molar_m1">M1</string>
    <string name="lbl_subject_molar_m2">M2</string>
    <string name="lbl_subject_molar_m3">M3</string>
    <string name="lbl_subject_molar_l1">M1 (L)</string>
    <string name="lbl_subject_molar_l2">M2 (L)</string>
    <string name="lbl_subject_molar_l3">M3 (L)</string>
    <string name="lbl_subject_molar_r1">M1 (R)</string>
    <string name="lbl_subject_molar_r2">M2 (R)</string>
    <string name="lbl_subject_molar_r3">M3 (R)</string>
    <string name="lbl_subject_molar_q1">Q1</string>
    <string name="lbl_subject_molar_q2">Q2</string>
    <string name="lbl_subject_molar_q3">Q3</string>
    <string name="lbl_subject_molar_q4">Q4</string>
    <string name="lbl_subject_nav_basic_info">Basic Info</string>
    <string name="lbl_subject_nav_molar_data">Molar Data</string>
    <string name="lbl_subject_nav_notes">Notes</string>
    <string name="charts">Charts</string>
    <string name="individuals">Individuals</string>
    <string name="multiple">Multiple</string>
    <string name="lbl_subj_analysis_display">Data set:</string>
    <string name="lbl_analysis_group_by">Split by:</string>
    <string name="default_project_title">UntitledProject</string>
    <string name="default_subject_id">UnknownIndividual</string>
    <string name="default_dlg_title"></string>
    <string name="default_dlg_msg"></string>
    <string name="default_dlg_bt_pos_txt">@string/dlg_bt_ok</string>
    <string name="default_dlg_bt_neg_txt">@string/dlg_bt_cancel</string>
    <string name="default_dlg_txt_input_hint"></string>
    <string name="default_new_folder_name">New Folder</string>
    <string name="out_msg_cancelled">Cancelled</string>
    <string name="out_msg_no_file_sel">No file selected</string>
    <string name="out_msg_no_dir_sel">No directory selected</string>
    <string name="out_msg_file_saved">File saved</string>
    <string name="out_msg_import_success">Import successful</string>
    <string name="out_msg_export_success">Successfully exported file:\n%s</string>
    <string name="dlg_bt_ok">OK</string>
    <string name="dlg_bt_cancel">Cancel</string>
    <string name="dlg_bt_yes">Yes</string>
    <string name="dlg_bt_no">No</string>
    <string name="dlg_bt_close">Close</string>
    <string name="dlg_bt_create">Create</string>
    <string name="dlg_bt_continue">Continue</string>
    <string name="dlg_bt_accept">Accept</string>
    <string name="dlg_bt_decline">Decline</string>
    <string name="dlg_bt_submit">Submit</string>
    <string name="dlg_bt_save">Save</string>
    <string name="dlg_bt_no_save">Don\'t save</string>
    <string name="dlg_bt_add">Add</string>
    <string name="dlg_bt_overwrite">Overwrite</string>
    <string name="dlg_title_overwrite">Overwrite?</string>
    <string name="dlg_msg_overwrite">File already exists. Do you want to overwrite?</string>
    <string name="dlg_title_export_csv_raw">Export Project</string>
    <string name="dlg_msg_export_csv_raw">Select file format:</string>
    <string name="dlg_bt_csv">.csv</string>
    <string name="dlg_bt_raw">.mwsd (serialized data)</string>
    <string name="dlg_bt_xml">.xml</string>
    <string name="dlg_bt_json">.json</string>
    <string name="dlg_title_new_project">New Project</string>
    <string name="dlg_msg_new_project">Project title:</string>
    <string name="dlg_hint_new_project">@string/default_project_title</string>
    <string name="dlg_title_rename_proj_import">Project exists</string>
    <string name="dlg_msg_rename_proj_import">A project with the same name already exists. Rename imported project to continue:</string>
    <string name="dlg_title_edit_project">Rename Project</string>
    <string name="dlg_title_del_proj_conf">Delete project?</string>
    <string name="dlg_msg_del_proj_conf">Are you sure you want to delete this project?</string>
    <string name="dlg_title_del_proj_conf2">Confirm project deletion</string>
    <string name="dlg_msg_del_proj_conf2">Press \"Continue\" to permanently delete the following project:</string>
    <string name="dlg_title_unsaved_changes">Save changes?</string>
    <string name="dlg_msg_unsaved_changes">Unsaved changes will be lost when MolWear is closed. Save project?</string>
    <string name="dlg_title_feature_not_implemented">Feature not available</string>
    <string name="dlg_msg_feature_not_implemented">This feature hasn\'t been implemented yet.</string>
    <string name="dlg_title_new_subject">New Individual</string>
    <string name="dlg_msg_new_subject">Individual ID:</string>
    <string name="dlg_hint_new_subject">@string/default_subject_id</string>
    <string name="dlg_title_edit_subject">Edit Individual ID</string>
    <string name="dlg_title_del_subj_conf">Delete data?</string>
    <string name="dlg_msg_del_subj_conf">Are you sure you want to delete this entry?</string>
    <string name="dlg_title_del_subj_conf2">Confirm data deletion</string>
    <string name="dlg_msg_del_subj_conf2">Press \"Continue\" to delete the following entry:</string>
    <string name="dlg_title_set_wear_lvl">Wear score</string>
    <string name="dlg_msg_set_wear_lvl"></string>
    <string name="dlg_title_wear_lvl_desc">Wear score descriptions</string>
    <string name="dlg_title_molar_note">Notes</string>
    <string name="dlg_msg_molar_note"></string>
    <string name="dlg_hint_molar_note">Notes</string>
    <string name="dlg_title_app_prefs">Preferences</string>
    <string name="dlg_msg_app_prefs"></string>
    <string name="dlg_title_subject_analysis">Analysis (Individual)</string>
    <string name="dlg_msg_subject_analysis"></string>
    <string name="dlg_title_multiple_analysis">Analysis (Multiple)</string>
    <string name="dlg_msg_multiple_analysis"></string>
    <string name="dlg_title_export_chart">Export Chart</string>
    <string name="dlg_msg_export_chart">File type:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="all">All</string>
    <string name="max_n">max N</string>
    <string name="inner">Inner</string>
    <string name="outer">Outer</string>
    <string name="upper">Upper</string>
    <string name="lower">Lower</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="desc_pref_auto_save">Automatically save project changes</string>
    <string name="desc_pref_use_sys_file_picker">Use system file picker for importing</string>
    <string name="desc_pref_case_sensitive_group_ids">Case-sensitive Group/Site IDs</string>
    <string name="central">Central</string>
    <string name="lateral">Lateral</string>
    <string name="molar">Molar</string>
    <string name="premolar">Premolar</string>
    <string name="cuspid">Cuspid</string>
    <string name="incisor">Incisor</string>
    <string name="desc_sex_m">Male</string>
    <string name="desc_sex_m_unk">Possible male</string>
    <string name="desc_sex_u">@string/unknown</string>
    <string name="desc_sex_f_unk">Possible female</string>
    <string name="desc_sex_f">Female</string>
</resources>