<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Sean Pesce
-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_subject_basic_info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="160dp">

            <TextView
                android:id="@+id/lbl_subject_basic_info_header"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_subject_nav_basic_info"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_site_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="24sp"
                    android:hint="@string/lbl_site_id"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_group_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="24sp"
                    android:hint="@string/lbl_group_id"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_subject_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:layout_marginBottom="10dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:hint="@string/lbl_subject_age"/>
                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radio_group_subject_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0.50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_subject_sex" />

                    <RadioButton
                        android:id="@+id/radio_sex_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/desc_sex_m"/>

                    <RadioButton
                        android:id="@+id/radio_sex_m_unk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/desc_sex_m_unk"/>

                    <RadioButton
                        android:id="@+id/radio_sex_u"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/desc_sex_u"/>

                    <RadioButton
                        android:id="@+id/radio_sex_f_unk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/desc_sex_f_unk"/>

                    <RadioButton
                        android:id="@+id/radio_sex_f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/desc_sex_f"/>
                </RadioGroup>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
