<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Sean Pesce
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_import_project"
                android:icon="@drawable/ic_folder"
                android:title="@string/import_project" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_github"
                android:title="@string/github_view" />
        </menu>
    </item>

</menu>
