<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Sean Pesce
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dlg_main_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/dlg_title_bar"
        style="?android:attr/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        >

        <TextView
            android:id="@+id/dlg_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:ellipsize="end"
            android:textStyle="bold"
            style="@android:style/TextAppearance.DialogWindowTitle"
            />

    </LinearLayout>

    <!--<ScrollView-->
        <!--android:id="@+id/dlg_scrollview"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--&gt;-->

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->


        <ScrollView
            android:id="@+id/dlg_msg_scrollview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/dlg_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="6dp"
                android:paddingBottom="4dp"
                android:singleLine="false"
                />
        </ScrollView>

            <LinearLayout
                android:id="@+id/dlg_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:minWidth="72dp"
                android:layout_gravity="center_horizontal"
                >

            </LinearLayout>

        <!--</LinearLayout>-->

    <!--</ScrollView>-->


    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/dlg_button_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        >

        <Button
            android:id="@+id/bt_negative"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dlg_bt_cancel"
            />

        <Button
            android:id="@+id/bt_neutral"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dlg_bt_continue"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/bt_positive"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dlg_bt_ok"
            />

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>
